// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SliderQuestionSchema default value range 0 - 100: <0 1`] = `
"[
  {
    \\"code\\": \\"custom\\",
    \\"message\\": \\"\`defaultValue\` (default: 50) should be in the range of \`minimumValue\` (default: 0) and \`maximumValue\` (default: 100)\\",
    \\"path\\": []
  }
]"
`;

exports[`SliderQuestionSchema default value range 0 - 100: >100 1`] = `
"[
  {
    \\"code\\": \\"custom\\",
    \\"message\\": \\"\`defaultValue\` (default: 50) should be in the range of \`minimumValue\` (default: 0) and \`maximumValue\` (default: 100)\\",
    \\"path\\": []
  }
]"
`;

exports[`SliderQuestionSchema defaultValueFromQuestionId cannot be null 1`] = `
"[
  {
    \\"code\\": \\"invalid_type\\",
    \\"expected\\": \\"string\\",
    \\"received\\": \\"null\\",
    \\"path\\": [
      \\"defaultValueFromQuestionId\\"
    ],
    \\"message\\": \\"Expected string, received null\\"
  }
]"
`;

exports[`SliderQuestionSchema defaultValueFromQuestionId is question ID: empty id 1`] = `
"[
  {
    \\"code\\": \\"too_small\\",
    \\"minimum\\": 1,
    \\"type\\": \\"string\\",
    \\"inclusive\\": true,
    \\"message\\": \\"Should be at least 1 characters\\",
    \\"path\\": [
      \\"defaultValueFromQuestionId\\"
    ]
  },
  {
    \\"validation\\": \\"regex\\",
    \\"code\\": \\"invalid_string\\",
    \\"message\\": \\"Question ID can only include letters, numbers, \\\\\\"_\\\\\\", \\\\\\"[\\\\\\", and \\\\\\"]\\\\\\".\\",
    \\"path\\": [
      \\"defaultValueFromQuestionId\\"
    ]
  }
]"
`;

exports[`SliderQuestionSchema defaultValueFromQuestionId is question ID: invalid id 1`] = `
"[
  {
    \\"validation\\": \\"regex\\",
    \\"code\\": \\"invalid_string\\",
    \\"message\\": \\"Question ID can only include letters, numbers, \\\\\\"_\\\\\\", \\\\\\"[\\\\\\", and \\\\\\"]\\\\\\".\\",
    \\"path\\": [
      \\"defaultValueFromQuestionId\\"
    ]
  }
]"
`;

exports[`SliderQuestionSchema slider tuple: one item 1`] = `
"[
  {
    \\"code\\": \\"too_small\\",
    \\"minimum\\": 2,
    \\"inclusive\\": true,
    \\"type\\": \\"array\\",
    \\"path\\": [
      \\"slider\\"
    ],
    \\"message\\": \\"Should have at least 2 items\\"
  }
]"
`;

exports[`SliderQuestionSchema slider tuple: three items 1`] = `
"[
  {
    \\"code\\": \\"too_big\\",
    \\"maximum\\": 2,
    \\"inclusive\\": true,
    \\"type\\": \\"array\\",
    \\"path\\": [
      \\"slider\\"
    ],
    \\"message\\": \\"Should have at most 2 items\\"
  }
]"
`;

exports[`SliderQuestionSchema slider tuple: zero item 1`] = `
"[
  {
    \\"code\\": \\"too_small\\",
    \\"minimum\\": 2,
    \\"inclusive\\": true,
    \\"type\\": \\"array\\",
    \\"path\\": [
      \\"slider\\"
    ],
    \\"message\\": \\"Should have at least 2 items\\"
  }
]"
`;

exports[`SliderQuestionSchema type 1`] = `
"[
  {
    \\"code\\": \\"invalid_type\\",
    \\"expected\\": \\"Slider\\",
    \\"received\\": \\"HowLongAgo\\",
    \\"path\\": [
      \\"type\\"
    ],
    \\"message\\": \\"Expected Slider, received HowLongAgo\\"
  }
]"
`;
